# LDSO_Twitch

./: .gitignore  CMakeLists.txt  README.md  make_project.sh
examples/: CMakeLists.txt  run_ldso_twitch_tum_mono.cc
include/: AffLight.h  Camera.h  DatasetReader.h  Feature.h  Frame.h  Map.h  NumTypes.h  Point.h  Settings.h
include/frontend/: CoarseInitializer.h  CoarseTracker.h  DSOViewer.h  FeatureDetector.h  FeatureMatcher.h  FullSystem.h  ImageAndExposure.h  ImageRW.h  LoopClosing.h  MinimalImage.h  PixelSelector2.h  Undistort.h  nanoflann.h
include/internal/: CalibHessian.h  FrameFramePrecalc.h  FrameHessian.h  GlobalCalib.h  GlobalFuncs.h  ImmaturePoint.h  IndexThreadReduce.h  PR.h  PointHessian.h  RawResidualJacobian.h  ResidualProjections.h  Residuals.h
include/internal/OptimizationBackend/: AccumulatedSCHessian.h  AccumulatedTopHessian.h  EnergyFunctional.h  MatrixAccumulators.h
src/: CMakeLists.txt  Frame.cc  Map.cc  Settings.cc
src/frontend/: CoarseInitializer.cc  CoarseTracker.cc  DSOViewer.cc  FeatureMatcher.cc  FullSystem.cc  ImageRW_OpenCV.cc  Undistort.cc
src/internal/: GlobalCalib.cc  ImmaturePoint.cc  Residuals.cc
